Criei botões laterias

--- a/index.html
+++ b/index.html
@@ -5,8 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Projeto redes sociais</title>
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
-    <h1>Olá, mundo!</h1>
+    <main>
+        <section id="telefone"> 
+            <iframe src="home.html" name="tela" id="tela" frameborder="0">Infelizmente seu navegador não é compatível com isso.</iframe>
+        </section>
+        <section id="sociais">
+            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a> <br>
+            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt="Youtube"></a> <br>
+            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="Github"></a> <br>
+            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a> <br>
+            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a> <br>
+            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a>
+        </section>
+    </main>
 </body>
 </html>
