Substitui as redes sociais pelas minhas,

--- a/github.html
+++ b/github.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <img src="imagens/tela-github.jpg" alt="Github">
-    <a href="https://github.com/gustavoguanabara" target="_blank">Acesse</a>
+    <a href="https://github.com/igorgianeri" target="_blank">Acesse</a>
 </body>
 </html>
