--- a/twitter.html
+++ b/twitter.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <img src="imagens/tela-twitter.jpg" alt="Twitter">
-    <a href="https://twitter.com/guanabara" target="_blank">Acesse</a>
+    <a href="https://twitter.com/ennnnnnui" target="_blank">Acesse</a>
 </body>
 </html>
